--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ header {
   cursor: pointer;
   color: white;
   margin-right: 10px;
+  display: none; /* Hidden by default */
 }
 
 .name {
@@ -175,16 +176,21 @@ footer .faq li {
 }
 
 /* Responsive Design */
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .nav-menu {
-    display: none;
-  }
-  
-  .main-nav {
     display: block;
   }
-  
+
   .menu-icon {
-    display: none;
+    display: block; /* Show hamburger icon on small screens */
+  }
+
+  .main-nav {
+    display: none; /* Hide top navigation on small screens */
+  }
+
+  .nav-menu a {
+    padding: 20px;
+    text-align: center;
   }
 }
