--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ header {
   width: 200px;
   height: auto;
   border-radius: 50%;
+  margin-right: 20px;
 }
 
 .skills, .references, .scroll-content {
