--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ header {
   margin-right: 200px;
 }
 
-.skills, .references, .scroll-content {
+.bio, .skills, .references, .scroll-content {
   margin-top: 20px;
   margin-left: 200px;
 }
