--- a/style.css
+++ b/style.css
@@ -130,5 +130,6 @@ footer {
   background-color: #333;
   color: white;
   padding: 20px;
-  text-align: center;
+  text-align: left;
+  margin-left: 200px;
 }
