--- a/style.css
+++ b/style.css
@@ -143,9 +143,15 @@ footer {
   width: 100%;
 }
 
-.contact-info, .footer-links {
+.contact-info {
   display: flex;
   flex-direction: column;
+}
+
+.footer-links {
+  display: flex;
+  flex-direction: column;
+  margin-left: 100 px;
 }
 
 .contact-info p, .footer-links a {
