--- a/style.css
+++ b/style.css
@@ -137,7 +137,12 @@ header {
   margin-right: 50px;
 }
 
-
+.aboutme {
+  flex: auto;
+  margin-top: 20px;
+  margin-left: 50px;
+  margin-right: 150px;
+}
 
 /* Footer Styling */
 footer {
