--- a/style.css
+++ b/style.css
@@ -137,6 +137,12 @@ header {
   margin-right: 50px;
 }
 
+.aboutme {
+  margin-top: 20px;
+  margin-left: 50px;
+  margin-right: 100px;
+}
+
 /* Footer Styling */
 footer {
   background-color: #333;
