--- a/style.css
+++ b/style.css
@@ -148,6 +148,8 @@ footer {
   background-color: #333;
   color: white;
   padding: 20px;
+  min-height: 100px;
+  margin-top: auto;
 }
 
 .footer-content {
