--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ header {
 }
 
 /* Main Content */
-.home-section, .about-section {
+.home-section {
   padding: 100px 20px;
   flex-grow: 1; /* Ensure the content section grows to fill available space */
 }
@@ -127,24 +127,10 @@ header {
   margin-left: 50px;
 }
 
-.outdoors-pic {
-  float: left;
-  width: 300px;
-  height: auto;
-  margin-right: 50px;
-  margin-left: 150px;
-}
-
 .bio, .skills, .references, .scroll-content {
   margin-top: 20px;
   margin-left: 150px;
   margin-right: 50px;
-}
-
-.aboutme {
-  margin-top: 20px;
-  margin-left: 50px;
-  margin-right: 100px;
 }
 
 /* Footer Styling */
