--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ header {
   padding: 100px 20px;
   display: flex; /* Align photo and text side by side */
   align-items: center; /* Vertically align the items */
-  flex-direction: row; /* Default row direction */
+  justify-content: flex-start;
 }
 
 .outdoors-pic {
