--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ header {
   width: 300px; /* Set the photo width to 300px */
   height: auto;
   margin-right: 20px; /* Add space between the image and the text */
+  margin-top: 50px;
 }
 
 .aboutme {
