--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ header {
 /* About Section */
 
 .outdoors-pic {
+  float: left;
   width: 300px; /* Set the photo width to 300px */
   height: auto;
   margin-right: 20px; /* Add space between the image and the text */
