--- a/style.css
+++ b/style.css
@@ -135,17 +135,24 @@ header {
 
 /* About Section */
 
+.about-section {
+  padding: 100px 20px;
+  justify-content: center;
+  align-items: center;
+}
+
 .outdoors-pic {
   float: left;
-  width: 300px; /* Set the photo width to 300px */
+  width: 300px;
   height: auto;
-  margin-right: 20px; /* Add space between the image and the text */
-  margin-top: 100px;
+  margin-right: 20px; 
   margin-left: 100px;
 }
 
-.aboutme {
-  flex: 1; /* Allow text to take up the remaining space */
+.aboutmetext {
+  margin-top: 20px;
+  margin-left: 50px;
+  margin-right: 150px;
 }
 
 /* Footer Styling */
