--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ header {
   align-items: center;
 }
 
-.outdoors-photo {
+.outdoors-pic {
   width: 300px;
   height: auto;
   margin-right: 30px;
