--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ header {
 /* About Section */
 
 .about-section {
+  padding: 100px 20px;
   display: flex;
   justify-content: center;
   align-items: center;
